# Unified_System_Core

./: .dockerignore  .easignore  .env  .env.agent_mail  .env.backup_jan25  .env.bak  .env.example  .env.igor  .env.local  .firebaserc  .git-sync.sh  .gitattributes  .gitignore  .gitmodules  .markdownlint.jsonc  .mcp.json  AGENTS.md  AuthKey_FBZMC4WSYZ.p8  BLUETOOTH_FIX_GUIDE.md  BYBIT_API_KEYS_GUIDE.md  CLAUDE.md  CLOUDMIG_REFACTOR_PLAN.md  CONTACTS.md  COPILOT_INSTRUCTIONS.md  CRYPTO_BOT_STATUS.md  DASHBOARD.md  FINAL_LAUNCH_REPORT.md  FINAL_REPORT.md  FINAL_SECURITY_CLEANUP_REPORT.md  FIVERR_GIGS_READY.md  FORMA_MEMORY.md  HA_DIAGNOSTIC_REPORT.md  HA_FIX_PLAN.md  IDEAL_FACTORY_GUIDE.md  IMG_1034.heic  INTENT_LEDGER.yaml  IPHONE_HA_SETUP.md  LinkedIn_Profile_Update.md  MASTER_TASKS.md  MESSAGE_FOR_KOSTA.md  (+113 more)
.agent/: .workflow-lock
External_Tools/Stack/agent_mail_sdk/: pyproject.toml
Projects/AI_Core/: .dockerignore  .env.backup_jan25  .env.example  .env.igor  .env.kostya  .env_server_deploy  .gcloudignore  .gitignore  AGENTS.md  AGENTS_LEARNING_SCHEME.md  API_KEY_SETUP.md  BOT_MENU_COMMANDS.md  BOT_REPAIR_REPORT.md  CRYPTO_BOT_SETUP.md  Dockerfile  FINANCIAL_REPORT_FEB2026.md  INSTALL.md  MULTI_ADMIN_SETUP.md  QUICK_START.md  README.md  browser_agent_agy.py  client_secret.json  compare_keys.py  docker-compose.dev.yml  docker-compose.yml  ecosystem.config.js  gcp-service-account.json  generate_token.py  google_token.json  mobile_relay_pm2.json  patch_env.py  pyproject.toml  requirements.txt  requirements_voice.txt  reset_google.py  run_tests.py  scratch_read.py  scratch_read_status.py  temp_key.txt  test_bot_commands.py  (+9 more)
Projects/AI_Core/.venv.py39.bak/: pyvenv.cfg
Projects/AI_Core/config/: ai-watchdog.service  gmail_credentials.json  gmail_token_v2.pickle  infrastructure.yaml
Projects/AI_Core/conversations/: 578363419.json  708531393.json
Projects/AI_Core/credentials.example/: google_token.json.example
Projects/AI_Core/docs/: ALICE_SETUP.md  DEPLOYMENT.md  GMAIL_SETUP.md  LOCAL_DEVELOPMENT.md  RBAC_GUIDE.md  VASER_SUPER_ADMIN.md  product_plan_and_presentation.md  super_admin_openapi.yaml  super_admin_role.md  vaser_hub_architecture.md  vaser_super_admin_openapi.yaml
Projects/AI_Core/k8s/: README.md  argocd-application.yaml  binauthz-policy.yaml  configmap.yaml  deployment-gke.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  network-policy.yaml  networkpolicy.yaml  pvc.yaml  role.yaml  secrets.yaml.template  service.yaml  serviceaccount.yaml  telegram_deployment.yaml
Projects/AI_Core/scripts/: ai-bot.service  create_data_store.py  deploy_to_server.sh  init_rbac.py  install_autostart_simple.ps1  link_pubsub_ingestion.py  manage-bots.sh  push_test_knowledge.py  run_voice_ssh.ps1  setup-rtx-ai-environment.ps1  setup_with_uv.ps1  start_chat.bat
Projects/AI_Core/src/: Resume_Igor_Perfect_✅.txt  __init__.py  agent_mail_client.py  agent_orchestrator.py  ai_factory_commands.py  ai_telegram_bot_v2.py  alert_listener.py  alice_skill.py  analyze_mail.py  api_proxy.py  bridge_server.py  bybit_trading_bot.py  calendar_client.py  chat_advanced.py  chat_llm.py  chat_llm_russian.py  check_all_balances.py  check_balance_pro.py  check_mail.py  check_windows_agents.py  cloud_logger.py  cmd_clear.py  config_manager.py  conversation_manager.py  crypto_trading_bot.py  daily_scheduler.py  dashboard.py  debug_register.py  device_monitor.py  digest_service.py  emails_4_months.json  finance_manager.py  financial_tracker.py  find_mail_project.py  firestore_db.py  firestore_listener.py  generate_resume.py  github_handler.py  gmail_client.py  google_auth.py  (+58 more)
Projects/AI_Core/tests/: demo_agent_no_api.py  test_agent.py  test_config_manager.py  test_copilot_sdk.py  test_core.py  test_gemini_agent.py  test_inference_client.py  test_vapi_client.py
Windows_AI_Core/: # install_all.ps1 for Windows  .env.example  .env_server_deploy  .gitignore  192.168.1.217.rdp  Dockerfile  Get-Service sshd  INSTALL.md  QUICKSTART.md  README-run-all-and-nim.md  README-run-windows.md  README.md  Untitled-1.yaml  ai_telegram_bot.py  cd C:\Users\gonya\my-ai-project  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  health.db  powershell -NoProfile -ExecutionPolicy B  pyproject.toml  pytest.ini  remote-connection-guide.md  requirements.txt  requirements_voice.txt  run_all_and_nim.ps1  run_all_windows.ps1  run_tests.py  run_voice_ssh.bat  setup-olive-simple.ps1  setup-olive.ps1  setup-simple.ps1  ssh -v gonya@192.168.1.217  ssh gonya@192.168.1.217  ssh-copy-id gonya@192.168.1.217  ssh-keygen -t ed25519 -C "gonya@IGOR"  start-debug-telegram.sh  tasks.db  test_llm.py  usage.db  (+4 more)
Windows_AI_Core/config/: gmail_token.pickle  infrastructure.yaml
Windows_AI_Core/conversations/: 708531393.json
Windows_AI_Core/docs/: ALICE_QUICK_SETUP.md  ALICE_SETUP.md  DEPLOYMENT.md  GMAIL_SETUP.md  LOCAL_DEVELOPMENT.md  README.md  TROUBLESHOOTING.md  YANDEX_STATION_INSTALL_SMART.md  YANDEX_STATION_SETUP.md
Windows_AI_Core/examples/: README.md
Windows_AI_Core/examples/csharp/: Program.cs  WindowsMLExample.csproj
Windows_AI_Core/examples/python/: onnx-runtime-basic.py  onnx-runtime-tensorrt.py  optimize-model-example.py
Windows_AI_Core/k8s/: argocd-application.yaml  configmap.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  service.yaml
Windows_AI_Core/scripts/: build_deps.ps1  install_autostart.ps1
Windows_AI_Core/src/: ai_telegram_bot_v2.py  bot_config_live.py  bot_config_template.py  calendar_client.py  cmd_clear.py  config_manager.py  conversation_manager.py  dashboard.py  device_monitor.py  digest_service.py  gmail_client.py  ha_controller.py  health.py  homekit_bridge.py  image_generator.py  inference_client.py  infrastructure.py  linear_client.py  logging_config.py  main.py  scheduler_service.py  usage_tracker.py  watchdog.py  web_search.py
Windows_AI_Core/tests/: test_config_manager.py  test_core.py
infra/observability/: README.md  __init__.py  docker-compose.yml  loki-config.yaml  otel-collector-config.yaml  prometheus.yml  pyproject.toml  requirements.txt  tempo-config.yaml  tracing.py
(+1802 files in other folders)
