[project]
name = "windows-ai-core"
version = "0.1.0"
description = "Local AI Chatbot for Unified System"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "transformers",
    "accelerate",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }
