[project]
name = "ai-telegram-bot"
version = "1.0.0"
description = "AI Telegram Bot for Unified System with configurable inference backend"
requires-python = ">=3.10"
dependencies = [
    "python-telegram-bot>=20.0",
    "aiohttp>=3.11.0",
    "cryptography>=43.0.0",
    "argon2-cffi>=23.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
gpu = [
    "torch",
    "transformers",
    "accelerate",
]

[project.scripts]
ai-telegram-bot = "src.main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
