[project]
name = "ai-telegram-bot"
version = "1.0.0"
description = "AI Telegram Bot for Unified System with configurable inference backend"
requires-python = ">=3.10"
dependencies = [
    "python-telegram-bot>=20.0",
    "aiohttp>=3.11.0",
    "cryptography>=46.0.5",
    "argon2-cffi>=23.1.0",
    "python-dotenv>=1.0.0",
    "google-cloud-firestore>=2.11.1",
    "google-api-python-client>=2.90.0",
    "google-auth-oauthlib>=1.0.0",
    "google-genai>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "jinja2>=3.1.2",
    "duckduckgo-search>=4.0.0",
    "psutil>=5.9.0",
    "pytz>=2023.3",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
gpu = [
    "torch",
    "transformers",
    "accelerate",
]

[project.scripts]
ai-telegram-bot = "src.main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
