[project]
name = "nodriver-daemon"
version = "0.1.0"
description = "Unix Socket daemon for browser control via nodriver"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "nodriver>=0.48",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
nodriver-daemon = "nodriver_daemon:main"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]
